# aberowl2

./: .gitignore  CHANGES.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.indexer  Dockerfile.llm  Dockerfile.nginx  Dockerfile.virtuoso  README.md  The final error message reveals the new issue  app.css  docker-compose.override.yml  docker-compose.yml  dockerhub-compose.yml  environment.yml  index.html  main.js  manage.py  mcp_server.py  ontology.js  pyproject.toml  query_classes.py  query_elastic.py  reindex_local_test_worker.sh  reload_docker.sh  reload_virtuoso.sh  requirements.txt  run-docker-build.sh  shutdown_docker.sh  start_docker.sh  start_local_test_worker.sh
aberowlapi/: .aberowl_secret_key  OntologyServer.groovy  health.groovy  server_manager.py  sparql_util.py  test_entity_names.groovy  util.py  virtuoso_manager.py
agents/: mcp_test_agent.py  mcp_test_client.py  query_parser.py  query_parser_v2.py
central_server/: Dockerfile  FAIR_API.md  README.md  docker-compose.yml  mcp_ontology_server.py  mcp_server.py  mcp_sparql_server.py  requirements.txt  run_docker.sh
data/: pizza.json
deploy/: README.md  SELF_HOSTING.md  deploy.sh  deploy_nginx.py  docker-compose.central.yml  docker-compose.selfhost.yml  docker-compose.worker.yml  download_bioportal.py  download_extra.py  download_ontologies.py  fetch_metadata.py  fix_ontology_files.py  launch_workers.py  plan_workers.py  register_workers.py  retry_downloads.py  selfhost_init.py
docker/: entrypoint.sh  nginx.conf  virtuoso.ini
misc/: openapi.yaml
results/: after_cache.json  baseline.json  (+1 more)
(+131 files in other folders)
